--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="JuceOPLVSTi : A VST instrument using the DOSBox OPL2 emulation" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>JuceOPLVSTi</title>
+    <title>JuceOPLVSTi by bsutherland</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/bsutherland/JuceOPLVSTi">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>JuceOPLVSTi</h1>
+        <h2>A VST instrument using the DOSBox OPL2 emulation</h2>
 
-          <h1 id="project_title">JuceOPLVSTi</h1>
-          <h2 id="project_tagline">A VST instrument using the DOSBox OPL2 emulation</h2>
+        <section id="downloads">
+          <a href="https://github.com/bsutherland/JuceOPLVSTi/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/bsutherland/JuceOPLVSTi/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/bsutherland/JuceOPLVSTi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/bsutherland/JuceOPLVSTi/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/bsutherland/JuceOPLVSTi/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <p>The OPL2 is an 2-operator digital FM chip from the late 80s, used in PC sound cards like the Adlib and original Sound Blaster.</p>
+
+<p><a href="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/screenshot_0-9_beta.png">Screenshot (beta release)</a></p>
 
 <h2>
 <a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
@@ -55,15 +54,6 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">JuceOPLVSTi maintained by <a href="https://github.com/bsutherland">bsutherland</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
