Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,17 +28,22 @@
 
     <div class="container">
       <section id="main_content">
-        <p>The OPL2 is an 2-operator digital FM chip from the late 80s, used in PC sound cards like the Adlib and original Sound Blaster.</p>
-
-<p><a href="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/screenshot_0-9_beta.png">Screenshot (beta release)</a></p>
-
-<h2>
-<a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
+        <h2>
+<a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
 <a name="09-beta" class="anchor" href="#09-beta"><span class="octicon octicon-link"></span></a>0.9 beta</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9-beta/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
+
+<h2>
+<a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h2>
+
+<p>The OPL2 is a simple 2-operator digital FM sound chip from the late 80s, used in PC sound cards like the Adlib and original Sound Blaster. This VST instrument allows you to program an emulated OPL2 chip.</p>
+
+<p><img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/screenshot_0-9_beta.png" alt="Screenshot (beta release)"></p>
+
+<p><a href="http://www.youtube.com/watch?v=HI7U5XxTSW0">Demo on YouTube</a> (music from PC version of Syndicate, tracked in Renoise).</p>
 
 <h2>
 <a name="source" class="anchor" href="#source"><span class="octicon octicon-link"></span></a>Source</h2>
