Update page for 0.9.3 release.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
         <h2>A VST instrument using the DOSBox OPL2 emulation</h2>
 
         <section id="downloads">
-          <a href="https://github.com/bsutherland/JuceOPLVSTi/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/bsutherland/JuceOPLVSTi/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/bsutherland/JuceOPLVSTi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -32,6 +30,11 @@
 <a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="093-beta" class="anchor" href="#093-beta"><span class="octicon octicon-link"></span></a>0.9.3 beta</h3>
+
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.3-beta/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
+
+<h3>
 <a name="09-beta" class="anchor" href="#09-beta"><span class="octicon octicon-link"></span></a>0.9 beta</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9-beta/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
@@ -41,9 +44,9 @@
 
 <p>The OPL2 is a simple 2-operator digital FM sound chip from the late 80s, used in PC sound cards like the Adlib and original Sound Blaster. This VST instrument allows you to program an emulated OPL2 chip.</p>
 
-<p><img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/screenshot_0-9_beta.png" alt="Screenshot (beta release)"></p>
+<p><img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/screenshot_0-9-3_beta.png" alt="Screenshot (0.9.3 beta release)"></p>
 
-<p><a href="http://www.youtube.com/watch?v=HI7U5XxTSW0">Demo on YouTube</a> (music from PC version of Syndicate, tracked in Renoise).</p>
+<p><a href="http://www.youtube.com/watch?v=HI7U5XxTSW0">Demo on YouTube</a> (Early version with no UI, music from PC version of Syndicate, tracked in Renoise).</p>
 
 <h2>
 <a name="source" class="anchor" href="#source"><span class="octicon octicon-link"></span></a>Source</h2>
