--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 <a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="095-beta" class="anchor" href="#095-beta"><span class="octicon octicon-link"></span></a>0.9.5 beta</h3>
+
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.5-beta/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
+<p>Bugfixes, support for loading Creative Labs Sound Blaster Instrument format.</p>
+
+<h3>
 <a name="093-beta" class="anchor" href="#093-beta"><span class="octicon octicon-link"></span></a>0.9.3 beta</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.3-beta/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
