Updated with 0.9.6 release
Bug fixes and features:

Supports loading of .sbi instrument files (drag and drop).
Hundreds of .sbi files included.
MIDI pitch wheel events supported.
Should now run under Windows XP.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
 <a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="096-beta" class="anchor" href="#096-beta"><span class="octicon octicon-link"></span></a>0.9.6 beta</h3>
+
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.6-beta/0.9.6-beta.zip">Windows VST (32-bit DLL)</a></p>
+<p>
+  <ul>
+    <li>Supports loading of .sbi instrument files (drag and drop).</li>
+    <li>Hundreds of .sbi files included.</li>
+    <li>MIDI pitch wheel events supported.</li>
+    <li>Should now run under Windows XP.</li>
+  </ul>
+</p>
+
+<h3>
 <a name="095-beta" class="anchor" href="#095-beta"><span class="octicon octicon-link"></span></a>0.9.5 beta</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.5-beta/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
