Update website for 0.9.7 release.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
 <a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="097" class="anchor" href="#096-beta"><span class="octicon octicon-link"></span></a>0.9.7</h3>
+
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.7/0.9.7.zip">Windows VST (32-bit DLL)</a></p>
+<p>
+Bug fixes and features (thanks to Trylle!)
+  <ul>
+    <li>Workaround or Cubase.</li>
+    <li>Better channel re-use.</li>
+    <li>Channel use displayed in UI.</li>
+  </ul>
+  
+  <p><img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/0.9.7-screenshot.png" alt="Screenshot (0.9.7 release)"></p>
+</p>
+
+<h3>
 <a name="096-beta" class="anchor" href="#096-beta"><span class="octicon octicon-link"></span></a>0.9.6 beta</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.6-beta/0.9.6-beta.zip">Windows VST (32-bit DLL)</a></p>
