Add link to 64-bit DLL

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <a name="097" class="anchor" href="#096-beta"><span class="octicon octicon-link"></span></a>0.9.7</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.7/0.9.7.zip">Windows VST (32-bit DLL)</a></p>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.7/JuceOPLVSTi.x64.dll">Windows VST (32-bit DLL)</a></p>
 <p>
 Bug fixes and features (thanks to Trylle!)
   <ul>
@@ -52,7 +53,7 @@ Bug fixes and features (thanks to Trylle!)
     <li>Channel use displayed in UI.</li>
   </ul>
   
-  <p><img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/0.9.7-screenshot.png" alt="Screenshot (0.9.7 release)"></p>
+  <img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/0.9.7-screenshot.png" alt="Screenshot (0.9.7 release)">
 </p>
 
 <h3>
