--- a/index.html
+++ b/index.html
@@ -41,6 +41,27 @@
 <a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="0101" class="anchor" href="#0101"><span class="octicon octicon-link"></span></a>0.10.1</h3>
+
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.10.1/0.10.1.zip">Windows VST (64-bit DLL)</a></p>
+<p>
+Bug fixes and features.
+  <ul>
+    <li>Added ZDoom emulator. Emulator is now selectable.</li>
+    <li><em>Increased output amplitude by approximately 8 times (about 9 dB).</em></li>
+    <li>Changed buffering scheme for DOSBox output as an attempt to solve noise issues on some VST hosts.</li>
+    <li>Tested under Windows 7 x64:
+      <ul>
+        <li>Renoise 2.8.0 x64</li>
+        <li>FL Studio 11.1 x86 (trial version)</li>
+        <li>Ableton Live 9.1.5 64-bit (trial version)</li>
+      </ul>
+    </li>
+  </ul>
+
+</p>
+
+<h3>
 <a name="097" class="anchor" href="#096-beta"><span class="octicon octicon-link"></span></a>0.9.7</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.9.7/0.9.7.zip">Windows VST (32-bit DLL)</a></p>
