Update website for 0.11.1 release

--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
 <a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="0111" class="anchor" href="#0111"><span class="octicon octicon-link"></span></a>0.11.1</h3>
+
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.11.1/0.11.1.zip">Windows VST (32-bit DLL)</a></p>
+<p>
+Bug fixes and features.
+  <ul>
+    <li>GUI too large for moderate screen resolution</li>
+    <li>Support percussion</li>
+    <li>Show envelope stage in channel usage display</li>
+    <li>Support writing to .DRO format (experimental)</li>
+  </ul>
+
+  <img src="https://raw.github.com/bsutherland/JuceOPLVSTi/gh-pages/images/screenshot_0-11-1.png" alt="Screenshot (0.11.1 release)">
+</p>
+
+<h3>
 <a name="0101" class="anchor" href="#0101"><span class="octicon octicon-link"></span></a>0.10.1</h3>
 
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.10.1/0.10.1.zip">Windows VST (64-bit DLL)</a></p>
