--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h3>
 <a name="0111" class="anchor" href="#0111"><span class="octicon octicon-link"></span></a>0.11.1</h3>
 
-<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.11.1/0.11.1.zip">Windows VST (32-bit DLL)</a></p>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.11.1/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
 <p>
 Bug fixes and features.
   <ul>
