--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <h3>
 <a name="0111" class="anchor" href="#0111"><span class="octicon octicon-link"></span></a>0.11.1</h3>
-
-<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.11.1/JuceOPLVSTi.dll">Windows VST (32-bit DLL)</a></p>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.11.1/JuceOPLVSTi_x64.zip">Windows VST (64-bit DLL + instruments)</a></p>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.11.1/JuceOPLVSTi_win32.dll">Windows VST (32-bit DLL)</a></p>
 <p>
 Bug fixes and features.
   <ul>
