--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
 <h2><a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="0131" class="anchor" href="#0131"><span class="octicon octicon-link"></span></a>0.13.1</h3>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.1/JuceOPLVSTi_0-13-1.zip">Windows VST (64-bit DLL + instruments)</a></p>
+<p>
+Features, fixes and changes
+  <ul>
+    <li>Fix issue for VST hosts requesting buffer sizes > 512 bytes. Big thanks to jeremypenner for finding the cause of this issue!</li>
+    <li>Upgraded Juce modules to latest versions.</li>
+    <li>Added many SBI presets contributed by litianist, and deleted duplicate files.</li>
+  </ul>
+</p>
+
+<h3>
 <a name="0121" class="anchor" href="#0121"><span class="octicon octicon-link"></span></a>0.12.1</h3>
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.12.1/JuceOPLVSTi.zip">Windows VST (64-bit DLL + instruments)</a></p>
 <p>
