Add Facebook like button.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
     <title>JuceOPLVSTi by bsutherland</title>
     <script>
@@ -34,6 +33,16 @@
         </section>
       </div>
     </header>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
 
     <div class="container">
       <section id="main_content">
