--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
         <section id="downloads">
           <a href="https://github.com/bsutherland/JuceOPLVSTi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+
+        <div id="social">
+          <div id="fb-root"></div>
+          <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));</script>
+          <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+        </div>
       </div>
     </header>
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-    <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+
 
     <div class="container">
       <section id="main_content">
