--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
 <h2><a name="download-binaries" class="anchor" href="#download-binaries"><span class="octicon octicon-link"></span></a>Download binaries</h2>
 
 <h3>
+<a name="0132" class="anchor" href="#0132"><span class="octicon octicon-link"></span></a>0.13.2</h3>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/JuceOPLVSTi_0-13-2.zip">Windows VST (32-bit and 64-bit DLLs + instruments)</a></p>
+<p>
+Features, fixes and changes
+  <ul>
+    <li>Updated to latest versions of Juce and Visual Studio 2015 (update 3)</li>
+    <li>File dialogs remember last opened directory</li>
+    <li>Add a button to open a file chooser modal for loading SBI instruments (in case drag and drop functionality doesn't work, eg under Linux)</li>
+    <li>Version number shown in UI</li>
+  </ul>
+</p>
+
+<h3>
 <a name="0131" class="anchor" href="#0131"><span class="octicon octicon-link"></span></a>0.13.1</h3>
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.1/JuceOPLVSTi_0-13-1.zip">Windows VST (64-bit DLL + instruments)</a></p>
 <p>
