Twitter follow icon.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
             fjs.parentNode.insertBefore(js, fjs);
           }(document, 'script', 'facebook-jssdk'));</script>
-          <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+          <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>    
+
+          <a href="https://twitter.com/JuceOPLVSTi" class="twitter-follow-button" data-show-count="false">Follow @JuceOPLVSTi</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>       
         </div>
       </div>
     </header>
