Link to OSX build.

--- a/index.html
+++ b/index.html
@@ -41,17 +41,20 @@
             js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
             fjs.parentNode.insertBefore(js, fjs);
           }(document, 'script', 'facebook-jssdk'));</script>
-          <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>    
-
-          <a href="https://twitter.com/JuceOPLVSTi" class="twitter-follow-button" data-show-count="false">Follow @JuceOPLVSTi</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>       
+          <div class="fb-like" data-href="https://www.facebook.com/JuceOPLVSTi/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+          </script>
+          Like the Facebook page for release announcements.
         </div>
       </div>
     </header>
 
-
-
     <div class="container">
       <section id="main_content">
+        <h2>Latest version - 0.13.2</h2>
+          <ul>
+            <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/JuceOPLVSTi_0-13-2.zip">Windows VST (32-bit and 64-bit DLLs + instruments)</a></li>
+            <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/AdlibBlaster.VSTi.zip">OSX VST</a></li>
+          </ul>
         <h2>Links</h2>
           <ul>
             <li><a href="https://github.com/bsutherland/JuceOPLVSTi/issues">Outstanding issues</a>. Also upload your SBI files here!</li>
@@ -79,6 +82,7 @@
 <h3>
 <a name="0132" class="anchor" href="#0132"><span class="octicon octicon-link"></span></a>0.13.2</h3>
 <p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/JuceOPLVSTi_0-13-2.zip">Windows VST (32-bit and 64-bit DLLs + instruments)</a></p>
+<p><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/AdlibBlaster.VSTi.zip">OSX VST</a></p>
 <p>
 Features, fixes and changes
   <ul>
