--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
         <h1>JuceOPLVSTi</h1>
         <h2>A VST instrument using the DOSBox OPL2 emulation</h2>
 
-        <section id="downloads">
-          <a href="https://github.com/bsutherland/JuceOPLVSTi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-
         <div id="social">
           <div id="fb-root"></div>
           <script>(function(d, s, id) {
@@ -50,11 +46,15 @@
 
     <div class="container">
       <section id="main_content">
-        <h2>Latest version - 0.13.2</h2>
+        <h2>Latest binaries - 0.13.2</h2>
           <ul>
             <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/JuceOPLVSTi_0-13-2.zip">Windows VST (32-bit and 64-bit DLLs + instruments)</a></li>
             <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/AdlibBlaster.VSTi.zip">OSX VST</a></li>
           </ul>
+        <h2>Source code</h2>
+          <section id="downloads">
+            <a href="https://github.com/bsutherland/JuceOPLVSTi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          </section>
         <h2>Links</h2>
           <ul>
             <li><a href="https://github.com/bsutherland/JuceOPLVSTi/issues">Outstanding issues</a>. Also upload your SBI files here!</li>
