set mobile viewport, minor tidying. Needs major mobile rework.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html class="">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="viewport" content="width=980">
 
 <title>JuceOPLVSTi</title>
 
@@ -26,18 +27,15 @@
 </script>
 
 </head>
-<body class="">
-        <div id="SITE_CONTAINER"><div class="noop" data-reactid=".0"><div data-reactid=".0.0"><style type="text/css" data-reactid=".0.0.$theme_fonts">.font_0 {font: normal normal bold 60px/1.4em 'PT Sans',sans-serif ;color:#CFCFCF;}
+<body>
+        <div id="SITE_CONTAINER"><div class="noop" data-reactid=".0"><div data-reactid=".0.0"><style type="text/css" data-reactid=".0.0.$theme_fonts">.font_0 {font: normal normal bold 375%/1.4em 'PT Sans',sans-serif ;color:#CFCFCF;}
 .font_1 {font: normal normal normal 16px/1.4em 'PT Sans',sans-serif ;color:#CFCFCF;}
 .font_2 {font: normal normal normal 40px/1.4em 'PT Sans',sans-serif ;color:#CFCFCF;}
-.font_3 {font: normal normal normal 60px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_4 {font: normal normal normal 40px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_5 {font: normal normal normal 30px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_6 {font: normal normal normal 22px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_7 {font: normal normal normal 17px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_8 {font: normal normal normal 15px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_9 {font: normal normal normal 14px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
-.font_10 {font: normal normal normal 12px/1.4em 'PT Sans',sans-serif ;color:#606060;}
+
+.font_6 {font: normal normal normal 17px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
+.font_7 {font: normal normal normal 15px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
+.font_8 {font: normal normal normal 14px/1.4em 'PT Sans',sans-serif ;color:#A8A8A8;}
+
 </style><style type="text/css" data-reactid=".0.0.$theme_colors">.color_0 {color: #FFFFFF;}
 .backcolor_0 {background-color: #FFFFFF;}
 .color_1 {color: #FFFFFF;}
