Link to releases directory instead of binaries.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
 
         <section>
           <h2><a name="getitnow">Latest release</a></h2>
-          <h3>0.13.2</h3>
           <p>
             SBI preset files included in Windows release.
             <ul>
-              <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/JuceOPLVSTi_0-13-2.zip">Windows VST</a> (32/64-bit DLLs)</li>
-              <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases/download/0.13.2/AdlibBlaster.VSTi.zip">OSX VST</a> (build courtesy of Jeff Russ)</li>
+              <li><a href="https://github.com/bsutherland/JuceOPLVSTi/releases">Binaries (Windows and OSX)</li>
               <li><a href="http://www.linuxmusicians.com/viewtopic.php?t=15485">Linux build instructions</a></li>
               <li><a href="https://github.com/bsutherland/JuceOPLVSTi">Source code</a> on GitHub</li>
             </ul>
