--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
             <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
             <![endif]-->
+  <meta name="google-site-verification" content="gff4cFU6i0L3yKA-nGEBZJD-1HaZp2eQNcokicS0_Xs" />
 </head>
 <body>
 
